--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0320.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0320.html
@@ -45,7 +45,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 570 198 831 247" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐνσχεθέντεσ?) </ins>
+            <ins title="nlp 2.00">ἐνσχεθέντεσ?) </ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 858 203 929 234" lang="grc">
@@ -272,7 +272,7 @@
       <span class="ocr_line" title="bbox 336 904 1210 953">
         <span id="w_49" class="ocr_word" title="bbox 336 906 646 953" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*φιλοκαθόλου </ins>
+            <ins title="nlp 2.00">φιλοκαθόλου </ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 676 906 800 950" lang="grc">
