--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0422.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0422.html
@@ -86,19 +86,19 @@
             <ins class="alt" title="nlp 1.00">ὀφθαλμούς</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 1685 245 1874 298" lang="grc">
+        <span id="w_14_0" class="ocr_word" title="bbox 1685 245 1874 298">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐνταῦθα</ins>
+            <ins class="alt" title="nlp 2.00">(ἐνταῦθα</ins>
+          </span>
+        </span>
+        <span id="w_14_1" class="ocr_word" title="bbox 1685 245 1874 298">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1910 262 1981 301" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_16" class="ocr_word" title="bbox 2013 262 2089 286" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
       </span>
@@ -733,7 +733,7 @@
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1779 939 1877 992" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
+            <ins title="nlp 2.00">(ἀπὸ</ins>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1915 938 1987 993" lang="grc">
@@ -996,7 +996,7 @@
         </span>
         <span id="w_191" class="ocr_word" title="bbox 1883 1216 1987 1269" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰδοὺ</ins>
+            <ins title="nlp 2.00">(ἰδοὺ</ins>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 2019 1215 2091 1270" lang="grc">
@@ -1204,7 +1204,7 @@
         </span>
         <span id="w_231" class="ocr_word" title="bbox 1119 1493 1222 1548" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰδοὺ</ins>
+            <ins title="nlp 2.00">(ἰδοὺ</ins>
           </span>
         </span>
         <span id="w_232" class="ocr_word" title="bbox 1258 1510 1379 1534" lang="grc">
@@ -2031,7 +2031,7 @@
         </span>
         <span id="w_391" class="ocr_word" title="bbox 781 2586 852 2626" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 879 2588 1067 2629">
@@ -2310,7 +2310,7 @@
         </span>
         <span id="w_446" class="ocr_word" title="bbox 606 2823 634 2856" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γ’</ins>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_447" class="ocr_word" title="bbox 813 2822 851 2855">
@@ -2716,9 +2716,14 @@
             <ins class="alt" title="nlp 1.00">στῆναι</ins>
           </span>
         </span>
-        <span id="w_520" class="ocr_word" title="bbox 1045 3115 1092 3150">
+        <span id="w_520_0" class="ocr_word" title="bbox 1045 3115 1092 3150">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 1</ins>
+            <ins class="alt" title="nlp 2.00">V1</ins>
+          </span>
+        </span>
+        <span id="w_520_1" class="ocr_word" title="bbox 1045 3115 1092 3150">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_521" class="ocr_word" title="bbox 1260 3117 1302 3151">
@@ -2751,11 +2756,6 @@
         <span id="w_526" class="ocr_word" title="bbox 1913 3112 2064 3161" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">γενέσθαι</ins>
-          </span>
-        </span>
-        <span id="w_527" class="ocr_word" title="bbox 2088 3112 2115 3146">
-          <span class="alternatives">
-            <ins title="nlp 2.00">T</ins>
           </span>
         </span>
       </span>
