--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0380.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0380.html
@@ -753,9 +753,14 @@
             <ins class="alt" title="nlp 1.00">ἰδίως</ins>
           </span>
         </span>
-        <span id="w_143" class="ocr_word" title="bbox 910 1022 914 1074">
+        <span id="w_143_0" class="ocr_word" title="bbox 910 1022 914 1074">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_143_1" class="ocr_word" title="bbox 910 1022 914 1074">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 942 1037 1048 1060" lang="grc">
@@ -791,11 +796,6 @@
         <span id="w_150" class="ocr_word" title="bbox 1827 1022 2066 1073" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἁρμόζουσι</ins>
-          </span>
-        </span>
-        <span id="w_151" class="ocr_word" title="bbox 2090 1024 2170 1061">
-          <span class="alternatives">
-            <ins title="nlp 2.00">138r</ins>
           </span>
         </span>
       </span>
@@ -2594,7 +2594,7 @@
         </span>
         <span id="w_497" class="ocr_word" title="bbox 1246 3012 1317 3052" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ </ins>
+            <ins title="nlp 2.00">καὶ </ins>
           </span>
         </span>
         <span id="w_498" class="ocr_word" title="bbox 1343 3011 1424 3054">
