--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0322.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0322.html
@@ -66,7 +66,7 @@
       <span class="ocr_line" title="bbox 458 1171 1260 1221">
         <span id="w_15" class="ocr_word" title="bbox 458 1175 637 1219" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐπέγραψε </ins>
+            <ins title="nlp 2.00">ἐπέγραψε </ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 663 1175 722 1212" lang="grc">
@@ -144,7 +144,7 @@
       <span class="ocr_line" title="bbox 457 1409 1264 1455">
         <span id="w_31" class="ocr_word" title="bbox 597 1411 789 1455" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γράμματα</ins>
+            <ins title="nlp 2.00">γράμματα</ins>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 828 1421 884 1442" lang="grc">
@@ -519,7 +519,7 @@
         </span>
         <span id="w_98" class="ocr_word" title="bbox 708 2582 878 2627" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπέλεγε),</ins>
+            <ins title="nlp 2.00">(ἐπέλεγε),</ins>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 904 2595 1003 2628" lang="grc">
@@ -578,7 +578,7 @@
         </span>
         <span id="w_111" class="ocr_word" title="bbox 882 2699 1004 2740" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">112,25 ἐπιδακρῦσαί</ins>
+            <ins title="nlp 2.00">ἐπιδακρῦσαί</ins>
           </span>
         </span>
       </span>
@@ -866,8 +866,7 @@
         </span>
         <span id="w_168" class="ocr_word" title="bbox 2181 1056 2212 1090">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iw</ins>
-            <del title="nlp 0.90">iw</del>
+            <ins title="nlp 2.00">ἐν</ins>
           </span>
         </span>
       </span>
@@ -1724,7 +1723,7 @@
         </span>
         <span id="w_331" class="ocr_word" title="bbox 2033 2698 2203 2745" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κεφαλῆς)</ins>
+            <ins title="nlp 2.00">κεφαλῆς)</ins>
           </span>
         </span>
       </span>
@@ -1807,7 +1806,7 @@
         </span>
         <span id="w_346" class="ocr_word" title="bbox 1807 2935 2049 2983" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Περιπάτου?) </ins>
+            <ins title="nlp 2.00">Περιπάτου?) </ins>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 2076 2946 2200 2970">
@@ -1888,7 +1887,7 @@
       <span class="ocr_line" title="bbox 1403 3111 2199 3159">
         <span id="w_362" class="ocr_word" title="bbox 1403 3113 1482 3156" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεῖν</ins>
+            <ins title="nlp 2.00">(δεῖν</ins>
           </span>
         </span>
         <span id="w_363" class="ocr_word" title="bbox 1515 3112 1689 3159" lang="grc">
