--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0423.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0423.html
@@ -1110,14 +1110,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_214" class="ocr_word" title="bbox 419 1436 536 1475" lang="grc">
+        <span id="w_214_0" class="ocr_word" title="bbox 419 1436 536 1475">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μέλαν</ins>
+            <ins class="alt" title="nlp 2.00">μέλαν</ins>
           </span>
         </span>
-        <span id="w_215" class="ocr_word" title="bbox 581 1434 643 1487" lang="grc">
+        <span id="w_214_1" class="ocr_word" title="bbox 419 1436 536 1475">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins class="alt" title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 689 1436 834 1489" lang="grc">
@@ -2227,8 +2227,7 @@
       <span class="ocr_line" title="bbox 64 2769 1838 2817">
         <span id="w_432" class="ocr_word" title="bbox 64 2769 84 2814">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">il</ins>
-            <del title="nlp 0.90">il</del>
+            <ins title="nlp 2.00">ἡ</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 111 2780 259 2816" lang="grc">
@@ -2275,9 +2274,14 @@
             <del title="nlp 0.90">suppl.</del>
           </span>
         </span>
-        <span id="w_441" class="ocr_word" title="bbox 1354 2773 1398 2806">
+        <span id="w_441_0" class="ocr_word" title="bbox 1354 2773 1398 2806">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_441_1" class="ocr_word" title="bbox 1354 2773 1398 2806">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_442" class="ocr_word" title="bbox 1584 2771 1624 2805">
@@ -2293,12 +2297,6 @@
         <span id="w_444" class="ocr_word" title="bbox 1726 2770 1782 2803" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_445" class="ocr_word" title="bbox 1808 2769 1838 2803">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
@@ -2419,9 +2417,14 @@
             <del title="nlp 0.90">suppl.</del>
           </span>
         </span>
-        <span id="w_469" class="ocr_word" title="bbox 711 2888 758 2922">
+        <span id="w_469_0" class="ocr_word" title="bbox 711 2888 758 2922">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_469_1" class="ocr_word" title="bbox 711 2888 758 2922">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_470" class="ocr_word" title="bbox 1000 2889 1041 2922">
@@ -2456,11 +2459,6 @@
             <ins class="alt" title="nlp 1.00">19</ins>
           </span>
         </span>
-        <span id="w_476" class="ocr_word" title="bbox 1807 2898 1885 2932" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅπερ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 66 2944 1694 2991">
         <span id="w_477" class="ocr_word" title="bbox 66 2944 232 2990">
@@ -2478,9 +2476,14 @@
             <ins class="alt" title="nlp 1.00">ἐπάγεται</ins>
           </span>
         </span>
-        <span id="w_480" class="ocr_word" title="bbox 566 2947 628 2981">
+        <span id="w_480_0" class="ocr_word" title="bbox 566 2947 628 2981">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 1:</ins>
+            <ins class="alt" title="nlp 2.00">V1:</ins>
+          </span>
+        </span>
+        <span id="w_480_1" class="ocr_word" title="bbox 566 2947 628 2981">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_481" class="ocr_word" title="bbox 661 2948 718 2981" lang="grc">
@@ -2523,11 +2526,6 @@
         <span id="w_488" class="ocr_word" title="bbox 1592 2957 1638 2982" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
-          </span>
-        </span>
-        <span id="w_489" class="ocr_word" title="bbox 1663 2945 1694 2979">
-          <span class="alternatives">
-            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
       </span>
@@ -2784,9 +2782,14 @@
             <ins title="nlp 2.00">ἴασις</ins>
           </span>
         </span>
-        <span id="w_537" class="ocr_word" title="bbox 623 3183 668 3217">
+        <span id="w_537_0" class="ocr_word" title="bbox 623 3183 668 3217">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_537_1" class="ocr_word" title="bbox 623 3183 668 3217">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_538" class="ocr_word" title="bbox 860 3180 898 3214">
@@ -2817,12 +2820,6 @@
         <span id="w_543" class="ocr_word" title="bbox 1522 3188 1701 3223">
           <span class="alternatives">
             <ins title="nlp 2.00">συναιρέσει</ins>
-          </span>
-        </span>
-        <span id="w_544" class="ocr_word" title="bbox 1726 3178 1753 3212">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
           </span>
         </span>
       </span>
