--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0381.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0381.html
@@ -591,7 +591,7 @@
         </span>
         <span id="w_110" class="ocr_word" title="bbox 1798 959 1881 995" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">138ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -703,19 +703,19 @@
             <ins title="nlp 2.00">σωμάτων’</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 1614 1109 1623 1118">
+        <span id="w_132_0" class="ocr_word" title="bbox 1614 1109 1623 1118">
           <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
+            <ins class="alt" title="nlp 2.00">·</ins>
+          </span>
+        </span>
+        <span id="w_132_1" class="ocr_word" title="bbox 1614 1109 1623 1118">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1645 1094 1707 1134" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_134" class="ocr_word" title="bbox 1742 1108 1821 1133" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰδοὺ</ins>
           </span>
         </span>
       </span>
@@ -953,9 +953,14 @@
             <ins title="nlp 2.00">θανάτου’</ins>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 347 1459 356 1468">
+        <span id="w_177_0" class="ocr_word" title="bbox 347 1459 356 1468">
           <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
+            <ins class="alt" title="nlp 2.00">·</ins>
+          </span>
+        </span>
+        <span id="w_177_1" class="ocr_word" title="bbox 347 1459 356 1468">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_178" class="ocr_word" title="bbox 397 1459 459 1483" lang="grc">
@@ -1001,11 +1006,6 @@
         <span id="w_186" class="ocr_word" title="bbox 1401 1451 1584 1492" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">νέκρωσιν</ins>
-          </span>
-        </span>
-        <span id="w_187" class="ocr_word" title="bbox 1618 1439 1824 1491" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀπεργάζε·</ins>
           </span>
         </span>
       </span>
@@ -1293,9 +1293,14 @@
             <ins title="nlp 2.00">ἐπιστημῶν’</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 1239 1799 1248 1809">
+        <span id="w_242_0" class="ocr_word" title="bbox 1239 1799 1248 1809">
           <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
+            <ins class="alt" title="nlp 2.00">·</ins>
+          </span>
+        </span>
+        <span id="w_242_1" class="ocr_word" title="bbox 1239 1799 1248 1809">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 1282 1799 1344 1822" lang="grc">
@@ -1316,11 +1321,6 @@
         <span id="w_246" class="ocr_word" title="bbox 1550 1783 1670 1834" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγων</ins>
-          </span>
-        </span>
-        <span id="w_247" class="ocr_word" title="bbox 1709 1795 1827 1833" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτὴν</ins>
           </span>
         </span>
       </span>
