--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0462.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0462.html
@@ -652,9 +652,9 @@
             <ins class="alt" title="nlp 1.00">μὴ</ins>
           </span>
         </span>
-        <span id="w_124" class="ocr_word" title="bbox 1946 869 2129 921" lang="grc">
+        <span id="w_124_0" class="ocr_word" title="bbox 1946 869 2129 921">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀναγινώσχειν</ins>
+            <ins class="alt" title="nlp 2.00">ἀναγινώσκειν</ins>
           </span>
         </span>
       </span>
@@ -1787,9 +1787,14 @@
             <ins title="nlp 2.00">30</ins>
           </span>
         </span>
-        <span id="w_346" class="ocr_word" title="bbox 588 2257 937 2309" lang="grc">
+        <span id="w_346_0" class="ocr_word" title="bbox 588 2257 937 2309">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατορθωσάμενος</ins>
+            <ins class="alt" title="nlp 2.00">κατορθωσάμενος</ins>
+          </span>
+        </span>
+        <span id="w_346_1" class="ocr_word" title="bbox 588 2257 937 2309">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 970 2270 1144 2310" lang="grc">
@@ -1830,11 +1835,6 @@
         <span id="w_354" class="ocr_word" title="bbox 1870 2256 1945 2312" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἴη,</ins>
-          </span>
-        </span>
-        <span id="w_355" class="ocr_word" title="bbox 1977 2256 2128 2300" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εὐθέως</ins>
           </span>
         </span>
       </span>
@@ -2091,9 +2091,14 @@
             <ins class="alt" title="nlp 1.00">7</ins>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 1463 2637 1584 2672" lang="grc">
+        <span id="w_401_0" class="ocr_word" title="bbox 1463 2637 1584 2672">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαταλ.</ins>
+            <ins class="alt" title="nlp 2.00">καταλ.</ins>
+          </span>
+        </span>
+        <span id="w_401_1" class="ocr_word" title="bbox 1463 2637 1584 2672">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1611 2641 1672 2684" lang="grc">
@@ -2110,12 +2115,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">colloc.</ins>
             <del title="nlp 0.90">colloc.</del>
-          </span>
-        </span>
-        <span id="w_405" class="ocr_word" title="bbox 1950 2639 2010 2672">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">KT</ins>
-            <del title="nlp 0.90">KT</del>
           </span>
         </span>
       </span>
@@ -2270,9 +2269,14 @@
             <del title="nlp 0.90">sq.</del>
           </span>
         </span>
-        <span id="w_433" class="ocr_word" title="bbox 1479 2756 1720 2801" lang="grc">
+        <span id="w_433_0" class="ocr_word" title="bbox 1479 2756 1720 2801">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρεχελεύετο—οἰηθῶσι</ins>
+            <ins class="alt" title="nlp 2.00">παρεκελεύετο—οἰηθῶσι</ins>
+          </span>
+        </span>
+        <span id="w_433_1" class="ocr_word" title="bbox 1479 2756 1720 2801">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_434" class="ocr_word" title="bbox 1938 2758 2009 2798">
@@ -2284,12 +2288,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_436" class="ocr_word" title="bbox 2122 2757 2149 2789">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
@@ -2406,7 +2404,7 @@
         </span>
         <span id="w_459" class="ocr_word" title="bbox 1101 2876 1177 2916" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;τις&gt;</ins>
+            <ins title="nlp 2.00">&gt;</ins>
           </span>
         </span>
         <span id="w_460" class="ocr_word" title="bbox 1192 2875 1206 2908">
