--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0382.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0382.html
@@ -959,9 +959,9 @@
             <ins title="nlp 2.00">ἀνθρώπῳ’</ins>
           </span>
         </span>
-        <span id="w_185" class="ocr_word" title="bbox 2128 1245 2137 1255">
+        <span id="w_185_0" class="ocr_word" title="bbox 2128 1245 2137 1255">
           <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
+            <ins class="alt" title="nlp 2.00">·</ins>
           </span>
         </span>
       </span>
