--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0424.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0424.html
@@ -463,9 +463,14 @@
             <ins class="alt" title="nlp 1.00">ἑνὸς</ins>
           </span>
         </span>
-        <span id="w_87_0" class="ocr_word" title="bbox 1922 677 2017 716">
+        <span id="w_87_0_0" class="ocr_word" title="bbox 1922 677 2017 716">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_87_0_1" class="ocr_word" title="bbox 1922 677 2017 716">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_87_1" class="ocr_word" title="bbox 1922 677 2017 716">
@@ -473,16 +478,11 @@
             <ins class="alt" title="nlp 2.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 2053 661 2092 702" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 404 728 2094 785">
         <span id="w_89" class="ocr_word" title="bbox 404 731 545 784" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 574 746 647 785" lang="grc">
@@ -1548,7 +1548,7 @@
         </span>
         <span id="w_298" class="ocr_word" title="bbox 1882 2133 2089 2188" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρότερον</ins>
+            <ins title="nlp 2.00">(πρότερον</ins>
           </span>
         </span>
       </span>
@@ -2712,9 +2712,14 @@
             <del title="nlp 0.90">suppl.</del>
           </span>
         </span>
-        <span id="w_517" class="ocr_word" title="bbox 1022 3240 1067 3274">
+        <span id="w_517_0" class="ocr_word" title="bbox 1022 3240 1067 3274">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_517_1" class="ocr_word" title="bbox 1022 3240 1067 3274">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_518" class="ocr_word" title="bbox 1257 3240 1302 3275">
@@ -2736,11 +2741,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_522" class="ocr_word" title="bbox 1704 3242 1734 3276">
-          <span class="alternatives">
-            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
       </span>
