--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0323.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0323.html
@@ -379,7 +379,7 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 168 1042 276 1081">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κύων</ins>
+            <ins title="nlp 2.00">κύων</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 294 1039 494 1080">
@@ -625,7 +625,7 @@
         </span>
         <span id="w_117" class="ocr_word" title="bbox 775 1563 884 1607" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἀλ(??)ξάνδρου?) </ins>
+            <ins title="nlp 2.00">Ἀλ(??)ξάνδρου?) </ins>
           </span>
         </span>
       </span>
@@ -1264,7 +1264,7 @@
         </span>
         <span id="w_243" class="ocr_word" title="bbox 660 2855 889 2902">
           <span class="alternatives">
-            <ins title="nlp 2.00">(potius Ἀρίστων</ins>
+            <ins title="nlp 2.00">Ἀρίστων</ins>
           </span>
         </span>
       </span>
@@ -2249,7 +2249,7 @@
         </span>
         <span id="w_437" class="ocr_word" title="bbox 1325 1680 1403 1713" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">vide Ἀριστοτελικός</ins>
+            <ins title="nlp 2.00">Ἀριστοτελικός</ins>
           </span>
         </span>
       </span>
@@ -2354,7 +2354,7 @@
         </span>
         <span id="w_457" class="ocr_word" title="bbox 1446 1972 1731 2015" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπεστενωμένα)</ins>
+            <ins title="nlp 2.00">(ἀπεστενωμένα)</ins>
           </span>
         </span>
         <span id="w_458" class="ocr_word" title="bbox 1750 1970 1831 2014">
@@ -2403,7 +2403,7 @@
         </span>
         <span id="w_467" class="ocr_word" title="bbox 1427 2090 1666 2135" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συντάγματα)</ins>
+            <ins title="nlp 2.00">(συντάγματα)</ins>
           </span>
         </span>
         <span id="w_468" class="ocr_word" title="bbox 1695 2088 1831 2128">
@@ -2838,7 +2838,7 @@
       <span class="ocr_line" title="bbox 1032 2908 1835 2957">
         <span id="w_550" class="ocr_word" title="bbox 1032 2916 1113 2955" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">(τῶν</ins>
           </span>
         </span>
         <span id="w_551" class="ocr_word" title="bbox 1140 2913 1431 2957" lang="grc">
