--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0383.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0383.html
@@ -2390,9 +2390,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 74 2949 1723 3002">
-        <span id="w_457" class="ocr_word" title="bbox 74 2957 108 3002" lang="grc">
+        <span id="w_457_0" class="ocr_word" title="bbox 74 2957 108 3002">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἤ </ins>
+            <ins class="alt" title="nlp 2.00">(ἤ</ins>
+          </span>
+        </span>
+        <span id="w_457_1" class="ocr_word" title="bbox 74 2957 108 3002">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_458" class="ocr_word" title="bbox 136 2955 322 3001">
@@ -2447,12 +2452,6 @@
         <span id="w_467" class="ocr_word" title="bbox 1541 2962 1617 2983" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὔτε</ins>
-          </span>
-        </span>
-        <span id="w_468" class="ocr_word" title="bbox 1642 2949 1723 2982">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">libri</ins>
-            <del title="nlp 0.90">libri</del>
           </span>
         </span>
       </span>
