--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0425.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0425.html
@@ -78,7 +78,7 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1314 243 1454 296" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεῖται</ins>
+            <ins title="nlp 2.00">(δεῖται</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1492 242 1564 296" lang="grc">
@@ -438,9 +438,14 @@
             <ins class="alt" title="nlp 1.00">ὑποτάττει</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 406 659 493 714">
+        <span id="w_83_0" class="ocr_word" title="bbox 406 659 493 714">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τις&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τις&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_83_1" class="ocr_word" title="bbox 406 659 493 714">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 525 676 572 700" lang="grc">
@@ -491,11 +496,6 @@
         <span id="w_93" class="ocr_word" title="bbox 1631 673 1654 711" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_94" class="ocr_word" title="bbox 1680 656 1861 711" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαίρεσις</ins>
           </span>
         </span>
       </span>
@@ -1058,7 +1058,7 @@
         </span>
         <span id="w_203" class="ocr_word" title="bbox 1032 1282 1164 1336" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 1200 1281 1270 1336" lang="grc">
@@ -1301,7 +1301,7 @@
         </span>
         <span id="w_251" class="ocr_word" title="bbox 819 1559 860 1613" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_252" class="ocr_word" title="bbox 883 1559 953 1613" lang="grc">
@@ -1457,7 +1457,7 @@
       <span class="ocr_line" title="bbox 186 1763 1866 1823">
         <span id="w_281" class="ocr_word" title="bbox 186 1770 268 1820" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins title="nlp 2.00">(τὸν</ins>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 300 1769 372 1822" lang="grc">
@@ -1596,7 +1596,7 @@
         </span>
         <span id="w_308" class="ocr_word" title="bbox 491 1907 531 1961" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_309" class="ocr_word" title="bbox 570 1907 641 1961" lang="grc">
@@ -1683,7 +1683,7 @@
         </span>
         <span id="w_325" class="ocr_word" title="bbox 991 1972 1075 2026" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 1106 1971 1177 2026" lang="grc">
@@ -1956,7 +1956,7 @@
         </span>
         <span id="w_378" class="ocr_word" title="bbox 1653 2247 1762 2298" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
+            <ins title="nlp 2.00">(οὐδὲ</ins>
           </span>
         </span>
         <span id="w_379" class="ocr_word" title="bbox 1797 2245 1868 2300" lang="grc">
@@ -2112,7 +2112,7 @@
         </span>
         <span id="w_408" class="ocr_word" title="bbox 700 2459 905 2513" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρότερον</ins>
+            <ins title="nlp 2.00">(πρότερον</ins>
           </span>
         </span>
         <span id="w_409" class="ocr_word" title="bbox 943 2458 1013 2512" lang="grc">
@@ -2652,9 +2652,9 @@
             <ins class="alt" title="nlp 1.00">οὔπω</ins>
           </span>
         </span>
-        <span id="w_510" class="ocr_word" title="bbox 1849 2981 1892 3013">
+        <span id="w_510_0" class="ocr_word" title="bbox 1849 2981 1892 3013">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 1</ins>
+            <ins class="alt" title="nlp 2.00">V1</ins>
           </span>
         </span>
       </span>
@@ -2923,9 +2923,14 @@
             <del title="nlp 0.90">suppl.</del>
           </span>
         </span>
-        <span id="w_561" class="ocr_word" title="bbox 609 3225 655 3257">
+        <span id="w_561_0" class="ocr_word" title="bbox 609 3225 655 3257">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_561_1" class="ocr_word" title="bbox 609 3225 655 3257">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_562" class="ocr_word" title="bbox 798 3223 839 3257">
@@ -2953,12 +2958,6 @@
         <span id="w_566" class="ocr_word" title="bbox 1244 3221 1302 3255" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_567" class="ocr_word" title="bbox 1328 3220 1355 3254">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
           </span>
         </span>
       </span>
