--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0385.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0385.html
@@ -1375,7 +1375,7 @@
         </span>
         <span id="w_265" class="ocr_word" title="bbox 1789 1894 1872 1930">
           <span class="alternatives">
-            <ins title="nlp 2.00">140ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
