--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0324.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0324.html
@@ -470,16 +470,11 @@
         </span>
         <span lang="grc" title="bbox 1163 991 1257 1039" class="ocr_word" id="w_86">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">Ἀρι-</ins>
+            <ins title="nlp 2.00">Ἀριστοτέλους</ins>
           </span>
         </span>
       </span>
       <span title="bbox 449 1052 941 1099" class="ocr_line">
-        <span lang="grc" title="bbox 449 1052 623 1090" class="ocr_word" id="w_87">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">στοτέλους</ins>
-          </span>
-        </span>
         <span lang="grc" title="bbox 649 1053 813 1099" class="ocr_word" id="w_88">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">συνήγαγε</ins>
@@ -739,7 +734,7 @@
       <span title="bbox 380 1699 992 1749" class="ocr_line">
         <span lang="grc" title="bbox 380 1699 663 1749" class="ocr_word" id="w_137">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἀρχίλοχος) (frg. 6,3) 22.21</ins>
+            <ins title="nlp 2.00">Ἀρχίλοχος) (frg. 6,3) 22.21</ins>
           </span>
         </span>
       </span>
@@ -766,7 +761,7 @@
         </span>
         <span title="bbox 802 1759 911 1808" class="ocr_word" id="w_142">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾&amp;#x003C;πὰρ&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 936 1762 996 1796" class="ocr_word" id="w_143">
@@ -964,9 +959,14 @@
             <ins title="nlp 2.00">ἴδιον</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 559 2174 633 2219" class="ocr_word" id="w_179">
+        <span id="w_179_0" class="ocr_word" title="bbox 559 2174 633 2219">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τῆς</ins>
+            <ins class="alt" title="nlp 2.00">(τῆς</ins>
+          </span>
+        </span>
+        <span id="w_179_1" class="ocr_word" title="bbox 559 2174 633 2219">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 657 2173 847 2219" class="ocr_word" id="w_180">
@@ -977,11 +977,6 @@
         <span lang="grc" title="bbox 873 2174 1011 2218" class="ocr_word" id="w_181">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">προάγει</ins>
-          </span>
-        </span>
-        <span title="bbox 1038 2173 1140 2215" class="ocr_word" id="w_182">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">236,2</ins>
           </span>
         </span>
       </span>
@@ -1649,7 +1644,7 @@
         </span>
         <span lang="grc" title="bbox 1993 1109 2207 1151" class="ocr_word" id="w_301">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀποκτείνας</ins>
+            <ins title="nlp 2.00">ἀποκτείνας</ins>
           </span>
         </span>
       </span>
@@ -1673,7 +1668,7 @@
         </span>
         <span lang="grc" title="bbox 1543 1230 1630 1274" class="ocr_word" id="w_305">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">περὶ</ins>
+            <ins title="nlp 2.00">(περὶ</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1648 1228 1856 1275" class="ocr_word" id="w_306">
@@ -1972,7 +1967,7 @@
       <span title="bbox 1329 1934 2159 1983" class="ocr_line">
         <span lang="grc" title="bbox 1329 1935 1586 1983" class="ocr_word" id="w_359">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">Εὐριπίδης)</ins>
+            <ins title="nlp 2.00">(Εὐριπίδης)</ins>
           </span>
         </span>
         <span title="bbox 1613 1937 1710 1979" class="ocr_word" id="w_360">
@@ -2152,7 +2147,7 @@
         </span>
         <span lang="grc" title="bbox 1594 2468 1681 2511" class="ocr_word" id="w_390">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">περὶ</ins>
+            <ins title="nlp 2.00">(περὶ</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1707 2470 1832 2510" class="ocr_word" id="w_391">
@@ -2408,9 +2403,14 @@
         </span>
       </span>
       <span title="bbox 1333 3104 2203 3157" class="ocr_line">
-        <span lang="grc" title="bbox 1333 3110 1518 3155" class="ocr_word" id="w_442">
+        <span id="w_442_0" class="ocr_word" title="bbox 1333 3110 1518 3155">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἠλίας).</ins>
+            <ins class="alt" title="nlp 2.00">(Ἠλίας).</ins>
+          </span>
+        </span>
+        <span id="w_442_1" class="ocr_word" title="bbox 1333 3110 1518 3155">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1568 3110 1779 3157" class="ocr_word" id="w_443">
@@ -2436,11 +2436,6 @@
         <span lang="grc" title="bbox 2027 3120 2094 3144" class="ocr_word" id="w_447">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">τοῖς</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 2115 3104 2203 3139" class="ocr_word" id="w_448">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ἀναλυτικοῖς</ins>
           </span>
         </span>
       </span>
