--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0501.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0501.html
@@ -470,7 +470,7 @@
         </span>
         <span id="w_89" class="ocr_word" title="bbox 1817 569 1859 623" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
       </span>
@@ -1004,16 +1004,11 @@
         </span>
         <span id="w_189" class="ocr_word" title="bbox 1780 1353 1865 1380" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σύν-</ins>
+            <ins title="nlp 2.00">σύνδεσμον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 183 1407 1866 1464">
-        <span id="w_190" class="ocr_word" title="bbox 183 1423 323 1450" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεσμον</ins>
-          </span>
-        </span>
         <span id="w_191" class="ocr_word" title="bbox 356 1424 582 1464" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προήνεγκε.</ins>
@@ -2364,9 +2359,14 @@
             <del title="nlp 0.90">Commeut.</del>
           </span>
         </span>
-        <span id="w_442" class="ocr_word" title="bbox 388 3202 419 3229">
+        <span id="w_442_0" class="ocr_word" title="bbox 388 3202 419 3229">
           <span class="alternatives">
-            <ins title="nlp 2.00">ιν</ins>
+            <ins class="alt" title="nlp 2.00">in</ins>
+          </span>
+        </span>
+        <span id="w_442_1" class="ocr_word" title="bbox 388 3202 419 3229">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_443" class="ocr_word" title="bbox 440 3203 531 3230">
@@ -2420,11 +2420,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Isag.</ins>
             <del title="nlp 0.90">Isag.</del>
-          </span>
-        </span>
-        <span id="w_452" class="ocr_word" title="bbox 1684 3186 1725 3220">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
       </span>
