--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0502.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0502.html
@@ -181,16 +181,11 @@
         </span>
         <span id="w_32" class="ocr_word" title="bbox 2029 292 2119 317" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπο-</ins>
+            <ins title="nlp 2.00">ἀποβλέπων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 433 343 1070 398">
-        <span id="w_33" class="ocr_word" title="bbox 433 343 585 398" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βλέπων</ins>
-          </span>
-        </span>
         <span id="w_34" class="ocr_word" title="bbox 617 358 718 387" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἶδος</ins>
@@ -271,9 +266,14 @@
             <ins class="alt" title="nlp 2.00">5</ins>
           </span>
         </span>
-        <span id="w_48_1" class="ocr_word" title="bbox 385 600 403 630">
+        <span id="w_48_1_0" class="ocr_word" title="bbox 385 600 403 630">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">εἰπόντεσ</ins>
+            <ins class="alt" title="nlp 2.00">εἰπόντες</ins>
+          </span>
+        </span>
+        <span id="w_48_1_1" class="ocr_word" title="bbox 385 600 403 630">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 679 601 726 626" lang="grc">
@@ -299,11 +299,6 @@
         <span id="w_53" class="ocr_word" title="bbox 1300 602 1624 641" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">διαφερόντων</ins>
-          </span>
-        </span>
-        <span id="w_54" class="ocr_word" title="bbox 1755 587 1874 628" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τῳ εἴδει ἐν τῶ τί</ins>
           </span>
         </span>
       </span>
@@ -479,9 +474,14 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 1645 898 1773 952" lang="grc">
+        <span id="w_87_0" class="ocr_word" title="bbox 1645 898 1773 952">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἴδει᾿ </ins>
+            <ins class="alt" title="nlp 2.00">εἴδει᾿,</ins>
+          </span>
+        </span>
+        <span id="w_87_1" class="ocr_word" title="bbox 1645 898 1773 952">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1821 900 1882 940" lang="grc">
@@ -492,11 +492,6 @@
         <span id="w_89" class="ocr_word" title="bbox 1921 901 2034 940" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάλιν</ins>
-          </span>
-        </span>
-        <span id="w_90" class="ocr_word" title="bbox 2073 915 2115 939" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -543,7 +538,7 @@
         </span>
         <span id="w_99" class="ocr_word" title="bbox 1768 969 1868 1023" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γένει’,</ins>
+            <ins title="nlp 2.00">γέωει᾿,</ins>
           </span>
         </span>
         <span id="w_100" class="ocr_word" title="bbox 1940 985 1984 1009" lang="grc">
@@ -1318,12 +1313,7 @@
         </span>
         <span id="w_246_0" class="ocr_word" title="bbox 821 2900 924 2940">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ΚΤV</ins>
-          </span>
-        </span>
-        <span id="w_246_1" class="ocr_word" title="bbox 821 2900 924 2940">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">ΚΤV;</ins>
           </span>
         </span>
         <span id="w_247" class="ocr_word" title="bbox 952 2900 1063 2934">
@@ -1607,12 +1597,7 @@
         </span>
         <span id="w_297_0" class="ocr_word" title="bbox 630 3136 770 3178">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_297_1" class="ocr_word" title="bbox 630 3136 770 3178">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 797 3135 913 3179" lang="grc">
