--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0503.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0503.html
@@ -437,7 +437,7 @@
       <span class="ocr_line" title="bbox 175 625 1846 682">
         <span id="w_84" class="ocr_word" title="bbox 314 633 435 680" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὕτω</ins>
+            <ins title="nlp 2.00">(οὕτω</ins>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 472 643 542 682" lang="grc">
@@ -904,9 +904,9 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_176" class="ocr_word" title="bbox 1824 1109 1910 1145">
+        <span id="w_176_0" class="ocr_word" title="bbox 1824 1109 1910 1145">
           <span class="alternatives">
-            <ins title="nlp 2.00">188ν</ins>
+            <ins class="alt" title="nlp 2.00">188v</ins>
           </span>
         </span>
       </span>
@@ -1313,16 +1313,11 @@
         </span>
         <span id="w_257" class="ocr_word" title="bbox 1737 1520 1852 1571" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλλή-</ins>
+            <ins title="nlp 2.00">ἀλλὴλοις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 178 1586 1855 1643">
-        <span id="w_258" class="ocr_word" title="bbox 178 1599 256 1639" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λοις</ins>
-          </span>
-        </span>
         <span id="w_259" class="ocr_word" title="bbox 279 1607 549 1635" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑποτάσσεται.</ins>
@@ -1864,16 +1859,16 @@
             <ins class="alt" title="nlp 1.00">ὑπάλληλον</ins>
           </span>
         </span>
-        <span id="w_364" class="ocr_word" title="bbox 1748 2148 1860 2188" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">προσλαμβάνει.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 115 2214 381 2267">
-        <span id="w_365" class="ocr_word" title="bbox 115 2227 157 2257">
+        <span id="w_365_0" class="ocr_word" title="bbox 115 2227 157 2257">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00">30</ins>
+          </span>
+        </span>
+        <span id="w_365_1" class="ocr_word" title="bbox 115 2227 157 2257">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">προσλαμβάνει.</ins>
           </span>
         </span>
       </span>
@@ -2405,12 +2400,7 @@
         </span>
         <span id="w_466_0" class="ocr_word" title="bbox 249 2949 356 2982">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">2089</ins>
-          </span>
-        </span>
-        <span id="w_466_1" class="ocr_word" title="bbox 249 2949 356 2982">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">2089:</ins>
           </span>
         </span>
         <span id="w_467" class="ocr_word" title="bbox 385 2957 450 2980">
@@ -2602,12 +2592,7 @@
         </span>
         <span id="w_501_0" class="ocr_word" title="bbox 940 3058 1046 3092">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">2089</ins>
-          </span>
-        </span>
-        <span id="w_501_1" class="ocr_word" title="bbox 940 3058 1046 3092">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">2089:</ins>
           </span>
         </span>
         <span id="w_502" class="ocr_word" title="bbox 1072 3059 1128 3091" lang="grc">
@@ -2633,7 +2618,7 @@
         </span>
         <span id="w_506" class="ocr_word" title="bbox 1493 3053 1667 3095" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὑπάλλ.— δυνάμενον</ins>
+            <ins title="nlp 2.00">ὑπάλλ.— δυνάμενον</ins>
           </span>
         </span>
         <span id="w_507" class="ocr_word" title="bbox 1881 3064 1938 3085" lang="grc">
@@ -2778,7 +2763,7 @@
         </span>
         <span id="w_533" class="ocr_word" title="bbox 1442 3180 1538 3214" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σῶμα</ins>
+            <ins title="nlp 2.00">σῶμα</ins>
           </span>
         </span>
         <span id="w_534" class="ocr_word" title="bbox 1566 3170 1595 3201">
